gitops/clusters/homelab/apps/homarr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homarr
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
