gitops/clusters/homelab/apps/homarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homarr
  namespace: homarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nasbenito.com`)
      kind: Rule
      services:
        - name: homarr
          port: 7575
  tls:
    secretName: nasbenito-com-tls
